# snake

./: CMakeLists.txt  README.md  snake.cpp  snake.h  snakepart.h  timer.cpp  timer.h
src/: CMakeLists.txt  main.cpp  snake.cpp  snake.h  snakepart.cpp  snakepart.h  timer.cpp  timer.h
